--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ description = "Minimal Tiled JSON loader & renderer for Macroquad"
 
 [dependencies]
 macroquad = "0.4"               # for rendering & textures
-nanoserde = "0.2.1"              # for zero-alloc JSON parsing
-# (Later you can swap to serde + serde_json if desired)
+serde_json = "1.0.142"
+serde = { version = "1.0", features = ["derive"] }
+anyhow = "1.0"
 
 [dev-dependencies]
 anyhow = "1.0"                 # for quick prototyping of errors in examples/tests
