baseline: universal draw + docs + layer rules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "macroquad_tiled_clone"
 version = "0.1.0"
 edition = "2021"
-authors = ["Your Name <you@example.com>"]
+authors = ["B3Z0 <vlad.cotiga75@gmail.com>"]
 license = "MIT OR Apache-2.0"
 description = "Minimal Tiled JSON loader & renderer for Macroquad"
+repository = "https://github.com/B3Z0/macroquad_tiled_clone.git"
+readme = "README.md"
+keywords = ["tiled", "macroquad", "tilemap", "gamedev"]
+categories = ["game-development", "graphics"]
 
 [dependencies]
 macroquad = "0.4"               # for rendering & textures
